# simple-markdown-server

./: Cargo.toml  DESIGN.md  README.md
sample/static/: aux.css  main.js  styles.css
sample/templates/: base.html  directory-chunk.html  directory.html  macros.html  markdown.html
src/: config.rs  handlers.rs  lib.rs  main.rs  request.rs  response.rs  uri.rs
src/handlers/: directory.rs  walkdir.rs
